--- a/src/css/accbar.css
+++ b/src/css/accbar.css
@@ -1,10 +1,21 @@
 /*Copyright 2017 Humber College
 
  
-Permission is hereby granted, free of charge, to any person obtaining a copy of the code for the Accessibility Bar and associated documentation files (â€œSoftwareâ€) for use in the Google Chrome internet browser, to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+Permission is hereby granted, free of charge, to any person obtaining a copy of the code for the Accessibility Bar and associated documentation files (“Software”) for use in the Google Chrome internet browser, to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
  
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.*/
+@keyframes fadeInLeft {
+  from {
+    opacity: 0.1;
+  
+  }
+
+  to {
+    opacity: 1;
+  
+  }
+}
 
 .accpanel{
     position: fixed;
@@ -22,6 +33,42 @@ The above copyright notice and this permission notice shall be included in all c
     
     display: block;;
 }
+.autohide{
+    background: transparent;
+    height: 232px;
+}
+.autohide .button{
+    display: none !important;
+}
+.button.autoshow{
+    display: none !important;
+}
+.autohide .button.autoshow{
+    display: inline-block !important;
+    background-color: rgba(255,255,255,0.8);
+    /*background-size: 70%; - Changed when image was changed */
+    background-size: 92%;
+    background-position: center;
+    border-radius: 5px;
+    position: relative;
+    top: 110px;
+    border: solid 1px;
+}
+.autohide:hover{
+    background: rgba(255,255,255,0.8);
+    height: initial;
+
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-name: fadeInLeft;
+}
+.autohide:hover .button{
+    display: inline-block !important;
+}
+
+.autohide:hover .button.autoshow{
+    display: none !important;
+}
 
 .accpanel a.button{
     width: 48px;
@@ -33,88 +80,124 @@ The above copyright notice and this permission notice shall be included in all c
     margin-left: 10px;
 }
 
+.button.autoshow{
+    background-image: url(./images/wheelchair-accessible-sign.png);
+}
 .accpanel a.button:hover{
     cursor: pointer;
+    background-color: transparent !important;
 }
 
 .tts-play{
-    background-image: url(../images/accessibility-default-text-to-speech.png);
+    background-image: url(./images/accessibility-default-text-to-speech.png);
     display: inline-block;
 }
 
 .pdf{
-    background-image: url(../images/accessibility-default-pdf.png);
+    background-image: url(./images/accessibility-default-pdf.png);
     display: inline-block;
 }
 
 .pdf:hover,
 .pdf:focus{
-    background-image: url(../images/accessibility-focus-pdf.png);
+    background-image: url(./images/accessibility-focus-pdf.png);
     display: inline-block;
 }
 
 .tts-play:hover,
 .tts-play:focus
 {
-    background-image: url(../images/accessibility-hover-text-to-speech.png);
+    background-image: url(./images/accessibility-hover-text-to-speech.png);
     display: inline-block;
 }
 
-.accpanel .button.tts-stop{
-    background-image: url(../images/accessibility-focus-text-to-speech-stop.png);
-    display: none;
+.accpanel .accbar.button.tts-stop{
+    background-image: url(./images/accessibility-focus-text-to-speech-stop.png);
+    display: none !important;
 }
 
 .accpanel.tts-status-playing .tts-play{
-    background-image: url(../images/accessibility-focus-text-to-speech-pause.png);
+    background-image: url(./images/accessibility-focus-text-to-speech-pause.png);
 }
 
-.accpanel.tts-status-playing .tts-stop{
-    display: inline-block;
+.accpanel.tts-status-playing .accbar.button.tts-stop{
+    display: inline-block !important;
 }
 
 
 .tts-status-playing.tts-status-pause .tts-play{
-    background-image: url(../images/accessibility-focus-text-to-speech-play.png);
+    background-image: url(./images/accessibility-focus-text-to-speech-play.png);
 }
 
 .accpanel .activitied.magnifier,
 .accpanel .activitied.magnifier:hover{
-    background-image:url(../images/accessibility-magnify-hover.png);
+    background-image:url(./images/accessibility-magnify-hover.png);
 }
 
 .button.rtf{
-    background-image: url(../images/accessibility-default-rtf.png);
+    background-image: url(./images/accessibility-default-rtf.png);
 }
 
 .button.rtf:hover,
 .button.rtf:focus{
-    background-image: url(../images/accessibility-focus-rtf.png);
+    background-image: url(./images/accessibility-focus-rtf.png);
 }
+
+.button.highlight{
+    background-image: url(./images/accessibility-default-links.png);
+}
+
+.button.highlight:hover,
+.button.highlight.activated,
+.button.highlight:focus{
+    background-image: url(./images/accessibility-links-focus.png);
+}
+
+body.contrast{
+    filter: invert(100%);
+}
+.button.contrast{
+    background-image: url(./images/accessibility-default-contrast.png);
+}
+.button.contrast:hover,
+.button.contrast.activated,
+.button.contrast:focus{
+    background-image: url(./images/accessibility-contrast-focus.png);
+}
+
 
 .button.print{
-    background-image: url(../images/accessibility-default-print.png);
+    background-image: url(./images/accessibility-default-print.png);
 }
-
+.linkhighlight{
+    background: black !important;
+    
+    color: white !important;
+    font-size: 22px !important;
+    text-decoration: underline !important;
+    color: yellow !important;
+    position: relative;
+    
+}
 .button.print:hover,
 .button.print:focus{
-    background-image: url(../images/accessibility-focus-print.png);
+    background-image: url(./images/accessibility-focus-print.png);
 }
 
 
 .button.magnifier{
-    background-image: url(../images/accessibility-default-magnify.png);
+    background-image: url(./images/accessibility-default-magnify.png);
     position:initial;
 }
 
 .button.magnifier:hover,
 .button.magnifier:focus{
-    background-image: url(../images/accessibility-magnify-hover.png);
+    background-image: url(./images/accessibility-magnify-hover.png);
 }
 
 .button.magnifier.activated,
 .button.magnifier.activated:hover{
-    background-image: url(../images/accessibility-magnify-quit.png);
+    background-image: url(./images/accessibility-magnify-quit.png);
 }
 
 .accpanel .hidden{
@@ -188,3 +271,8 @@ img.ttshighlight{
 -moz-box-shadow: 0px 0px 21px 2px rgba(255,0,64,1);
 box-shadow: 0px 0px 21px 2px rgba(255,0,64,1);
     }
+
+
+#google_translate_element{
+    display: none;
+}
